Implement game management in chessapi4j.functional
- Developed Game class to represent a chess game, including move management and game state.
- Created PGNMove class to handle moves with PGN properties, including suffix annotations and comments.
- Created Tag class for representing tags with names and values.
- Added FunctionalPositionTest to validate SAN move functionality.
- Updated package-info.java to document the chessapi4j package structure.