@@ -5,6 +5,6 @@ class ResourceAccessException extends RuntimeException {
     private static final long serialVersionUID = 1L;
 
     public ResourceAccessException(String resource, Throwable cause) {
-        super("Can not access resource %s. Error message: %s".formatted(resource, cause.getMessage()), cause);
+        super(String.format("Can not access resource %s. Error message: %s", resource, cause.getMessage()), cause);
     }
 }
